--- a/assets/css/editor_content.css
+++ b/assets/css/editor_content.css
@@ -45,6 +45,13 @@ Stylesheet for HTML blocks created with CKEditor to embed in Chamilo pages.
     font-weight: bold !important;
 }
 
+.tiny-content .ck-texte {
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    color: #000;
+    line-height: 1.6;
+}
+
 .tiny-content .font-arial {
     font-family: Arial, sans-serif;
 }
