--- a/src/CoreBundle/Resources/views/Course/about.html.twig
+++ b/src/CoreBundle/Resources/views/Course/about.html.twig
@@ -79,7 +79,7 @@
                         <div class="bg-white shadow rounded p-4">
                             <h3 class="sub-title text-xl font-bold mb-3">{{ "Course Information"|trans }}</h3>
                             <div class="course-information">
-                                <!-- Añade aquí la información del curso -->
+                                {{ description | raw }}
                             </div>
                         </div>
                     </div>
@@ -91,14 +91,18 @@
                                 <div class="session-subscribe mt-2">
                                     {% if not is_granted('IS_AUTHENTICATED') %}
                                         {% if 'allow_registration'|api_get_setting != 'false' %}
-                                            <a href="{{ base_url ~ '/main/auth/inscription.php' ~ redirect_to_session }}" class="btn btn--success w-full py-2 mt-2 text-white bg-green-600 rounded hover:bg-green-700">
+                                            <a href="{{ base_url ~ '/main/auth/inscription.php?c=' ~ course.code }}" class="btn btn--success w-full py-2 mt-2 text-white bg-green-600 rounded hover:bg-green-700">
                                                 <i class="fa fa-pencil" aria-hidden="true"></i> {{ 'Sign Up'|trans }}
                                             </a>
                                         {% endif %}
                                     {% elseif subscription %}
-                                        <a href="{{ url('home') }}courses/{{ course.code }}/index.php?sid=0" class="btn btn--success w-full py-2 mt-2 text-white bg-green-600 rounded hover:bg-green-700">{{ 'Course Homepage'|trans }}</a>
+                                        <a href="{{ base_url }}/course/{{ course.id }}/home?sid=0" class="btn btn--success w-full py-2 mt-2 text-white bg-green-600 rounded hover:bg-green-700">{{ 'Course Homepage'|trans }}</a>
+                                    {% elseif allow_subscribe %}
+                                        <a href="{{ base_url }}/main/auth/inscription.php?c={{ course.code }}" class="btn btn--success w-full py-2 mt-2 text-white bg-green-600 rounded hover:bg-green-700">{{ 'Subscribe'|trans }}</a>
                                     {% else %}
-                                        <a href="{{ url('home') }}courses/{{ course.code }}/index.php?action=subscribe&sec_token={{ token }}" class="btn btn--success w-full py-2 mt-2 text-white bg-green-600 rounded hover:bg-green-700">{{ 'Subscribe'|trans }}</a>
+                                        <button class="btn btn--success w-full py-2 mt-2 text-white bg-gray-400 rounded" title="{{ 'Subscription is not allowed for this course'|trans }}" disabled>
+                                            {{ 'Subscription Not Available'|trans }}
+                                        </button>
                                     {% endif %}
                                 </div>
                             {% else %}
