Internal: Fix session visibility and assignment import issues - refs BT#21604

--- a/public/main/template/default/course_description/index.html.twig
+++ b/public/main/template/default/course_description/index.html.twig
@@ -8,7 +8,7 @@
                         <div>
                             {{ description.title }}
                             {% if description.sessionId %}
-                                <i class="mdi mdi-star text-yellow-500"></i>
+                                {{ description.icon_session }}
                             {% endif %}
                         </div>
                         {% if is_allowed_to_edit %}
