Internal: Fix cursor visibility in TinyMCE on Firefox - refs BT#21943

--- a/assets/css/editor_content.css
+++ b/assets/css/editor_content.css
@@ -4,9 +4,11 @@ Stylesheet for HTML blocks created with CKEditor to embed in Chamilo pages.
 
 /* Reset styles */
 .tiny-content {
-    all: initial;
     display: block;
     width: 100%;
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
 }
 
 .tiny-content * {
