Internal: Fix file manager pagination and tab visibility issues - refs BT#21647

--- a/assets/css/scss/_documents.scss
+++ b/assets/css/scss/_documents.scss
@@ -42,7 +42,7 @@
 }
 
 .filemanager-container .thumbnails {
-  @apply flex flex-wrap gap-2.5 justify-center mb-12;
+  @apply flex flex-wrap gap-2.5 justify-center;
 }
 
 .filemanager-container .thumbnail-item {
