--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -50,6 +50,7 @@
 @import "organisms/course_card";
 @import "organisms/datatable";
 @import "organisms/dataview";
+@import "organisms/external_logins";
 @import "organisms/modals";
 @import "organisms/menu";
 @import "organisms/sidebar";
