--- a/src/CoreBundle/Resources/views/Mailer/Default/header.html.twig
+++ b/src/CoreBundle/Resources/views/Mailer/Default/header.html.twig
@@ -3,7 +3,7 @@
     <tr>
         <td width="245" {{ mail_header_style }}>
             <img class="navbar-brand-full" width="130"
-                 src="{{ theme_asset('images/header-logo.png', true) }}"
+                 src="{{ theme_asset_base64('images/header-logo.png', true) }}"
                  alt="Chamilo"/>
         </td>
         <td width="100%">            &nbsp;
