--- a/src/CoreBundle/Resources/views/Mailer/Legacy/cron_course_finished_body.html.twig
+++ b/src/CoreBundle/Resources/views/Mailer/Legacy/cron_course_finished_body.html.twig
@@ -1,1 +1,1 @@
-<p>{{ 'MailCronCourseFinishedBody'|trans|format(complete_user_name, session_name, session_name, _s.site_name) }}</p>
+<p>{{ 'MailCronCourseFinishedBody'|trans|format(complete_user_name, session_name, session_name, site_name) }}</p>
