--- a/assets/css/scss/atoms/_form.scss
+++ b/assets/css/scss/atoms/_form.scss
@@ -55,12 +55,47 @@
 }
 
 .field {
+  @apply mb-4;
+
   > small {
-    @apply text-caption text-primary;
+    @apply text-caption text-primary mt-1;
   }
 
   &-group {
     @apply flex gap-4 flex-wrap mb-4 items-start;
+  }
+
+  &.grid {
+    @apply mt-0;
+  }
+}
+
+.formgrid {
+  &.grid {
+    @apply mt-0;
+  }
+}
+
+.formgroup-inline {
+  @apply flex flex-wrap items-start;
+
+  .field,
+  .field-checkbox,
+  .field-radiobutton {
+    @apply mr-4;
+
+    > label {
+      @apply mr-2 mb-0;
+    }
+  }
+}
+
+.field-checkbox,
+.field-radiobutton {
+  @apply mb-4 flex items-center;
+
+  > label {
+    @apply ml-2 leading-none;
   }
 }
 
